ajuste no readme, no texto e na cor do título

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 
 			<div class="botoes">
-				<p>Clique nos botões e receba uma receita!</p>
+				<p>Clique nos botões e receba uma receita! (ou não...)</p>
 				<button onclick="pegarReceita('doces')">DOCE</button>
 				<button onclick="pegarReceita('salgadas')">SALGADA</button>
 				<button onclick="pegarReceita('todas')">TODAS</button>
@@ -50,7 +50,7 @@
 			<a href="https://github.com/AnaRizzi" target="blank"><img class="imgredes float-right" src="img/github.png"/></a>
 			<a href="https://www.linkedin.com/in/analuciarizzi/" target="blank"><img class="imgredes float-right" src="img/linkedin.jpg"/></a>
 		</div>			
-		<p>© 2021 - Desenvolvido por <a href="https://www.linkedin.com/in/analuciarizzi/" class="text-muted" target="blank">Ana Rizzi</a><br/>
+		<p>© 2024 - Desenvolvido por <a href="https://www.linkedin.com/in/analuciarizzi/" class="text-muted" target="blank">Ana Rizzi</a><br/>
 	</div>
 
 
