Ajustes realizado no título da ´página

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		<div id="conteudo">
 			<div class="titulo">
-				<h1>Receita Surpresa</h1>
+				<h1>Receita Surpresa porra nenhuma</h1>
 				<p>
 					Cansado de perder horas escolhendo uma receita? Deixe que nós escolhemos por você!
 				</p>
